--- a/아날로그시계/index.html
+++ b/아날로그시계/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang='ko'>
 <head>
-	<title>아날로그 시계</title>
+	<title>아날로그 시계 만들기</title>
 	<meta charset='utf-8'>
 	<!-- <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.6'> -->
 	
@@ -34,9 +34,6 @@
 
 	<!-- User JS File -->
 
-	
-	
-	
 	
 	<!-- IE 하위버전 폴리필 조건 주석문 -->
 	<!--[if (lte IE 9)]>
@@ -72,7 +69,6 @@
 		</div>
 	</div>
 	
-
 	<script src='js/timer.js'></script>
 
 </div>	
